--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   json_annotation: ^4.8.0
   go_router: ^6.5.2
   dartz: ^0.10.1
+  intl: ^0.18.0
+  http: ^0.13.5
 
 
 dev_dependencies:
